fixed grid of small-screen (imagegallery broke grid when collapsed)

--- a/marie.css
+++ b/marie.css
@@ -2652,7 +2652,7 @@ button#importbutton .importpng {
     }
 
 
-    div#toolbar, div#imagegallery.active, #menusearchbox, #searchbuttonarea{
+    div#toolbar, div#imagegallery, div#imagegallery.active, #menusearchbox, #searchbuttonarea{
       grid-column-start: 1;
       grid-column-end: 4;
       grid-row-start: 1;
